test/parser/error_recovery_inside_block.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn error1(x: i32) -> void {
    
    if (x == 0) {
        if (x == 2) {
            0;
            let
        // CHECK: [[# @LINE ]]:9: error: expected identifier
        } else {
            1;
        }
    }

    2;
}

// CHECK: FunctionDecl error1 -> void
// CHECK-NEXT:   ParamDecl:i32 x
// CHECK-NEXT:   Block
// CHECK-NEXT:     IfStmt
// CHECK-NEXT:       BinaryOperator '=='
// CHECK-NEXT:         DeclRefExpr x
// CHECK-NEXT:         IntLiteral '0'
// CHECK-NEXT:       Block
// CHECK-NEXT:         IfStmt
// CHECK-NEXT:           BinaryOperator '=='
// CHECK-NEXT:             DeclRefExpr x
// CHECK-NEXT:             IntLiteral '2
// CHECK-NEXT:           Block
// CHECK-NEXT:             IntLiteral '0'
// CHECK-NEXT:           Block
// CHECK-NEXT:             IntLiteral '1'
// CHECK-NEXT:     IntLiteral '2'
